feat: add badge and button components with styles and examples
- Introduced `Badge` and `Button` components in the `@rui-ark/vue-core` library.
- Added corresponding styles for both components in the themes package.
- Updated Tailwind CSS configuration to include new component paths.
- Created example usage for `Badge` and `Button` in the playground.
- Enhanced TypeScript configurations and added utility functions for better component behavior.

--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -8,7 +8,7 @@
   "license": "ISC",
   "keywords": [],
   "exports": {
-    "./mould/*": "./src/mould/*.ts",
+    "./crafts/*": "./src/crafts/*.ts",
     "./utils/*": "./src/utils/*.ts",
     "./razer/index.css": "./src/razer/index.css"
   },
