--- a/packages/themes/tsconfig.json
+++ b/packages/themes/tsconfig.json
@@ -10,6 +10,7 @@
     "declarationMap": true,
     "noEmit": false,
     "outDir": "dist",
+    "preserveSymlinks": true,
     "skipLibCheck": true
   },
   "include": ["**/*.ts"],
