--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -16,11 +16,15 @@
   "peerDependencies": {
     "@ark-ui/vue": "^5.30.0",
     "@rui-ark/themes": "workspace:*",
+    "@vueuse/core": "^14.1.0",
+    "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.0"
   },
   "devDependencies": {
     "@ark-ui/vue": "^5.30.0",
     "@rui-ark/themes": "workspace:*",
+    "@vueuse/core": "^14.1.0",
+    "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.0"
   }
 }
