--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -9,6 +9,7 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@ark-ui/vue": "^5.30.0",
     "@rui-ark/themes": "workspace:*",
     "@rui-ark/vue-core": "workspace:*",
     "lucide-vue-next": "^0.562.0",
