--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -19,6 +19,7 @@
     "@rui-ark/shared": "workspace:*",
     "@rui-ark/themes": "workspace:*",
     "@vueuse/core": "^14.1.0",
+    "@zag-js/select": "^1.31.1",
     "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.0",
     "vue-component-type-helpers": "^3.2.1"
@@ -29,6 +30,7 @@
     "@rui-ark/shared": "workspace:*",
     "@rui-ark/themes": "workspace:*",
     "@vueuse/core": "^14.1.0",
+    "@zag-js/select": "^1.31.1",
     "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.0",
     "vue-component-type-helpers": "^3.2.1"
