--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "lodash-es": "^4.17.22"
+    "es-toolkit": "^1.44.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.1",
-    "@types/lodash-es": "^4.17.12",
     "eslint": "^9.39.2"
   }
 }
