feat: update dialog component to enhance functionality and integrate new ark-ui version
- Updated dependencies to use '@hwacc/ark-ui-vue@5.30.1-pr.3758' for improved dialog features.
- Refactored dialog options to include new 'onAfterClose' callback for better lifecycle management.
- Enhanced dialog component to support 'exitComplete' event for improved user experience.
- Updated playground examples to demonstrate new dialog functionalities and integration with overlays.

--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -9,7 +9,7 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
-    "@ark-ui/vue": "^5.30.0",
+    "@ark-ui/vue": "npm:@hwacc/ark-ui-vue@5.30.1-pr.3758",
     "@rui-ark/themes": "workspace:*",
     "@rui-ark/vue-core": "workspace:*",
     "lucide-vue-next": "^0.562.0",
