--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -26,7 +26,7 @@
     "vue-component-type-helpers": "^3.2.1"
   },
   "devDependencies": {
-    "@ark-ui/vue": "^5.30.0",
+    "@ark-ui/vue": "npm:@hwacc/ark-ui-vue@5.30.1-pr.3758",
     "@iconify/vue": "^5.0.0",
     "@rui-ark/shared": "workspace:*",
     "@rui-ark/themes": "workspace:*",
