--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "keywords": [],
   "scripts": {
-    "dev": "storybook dev",
+    "dev": "storybook dev --port 4399",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
