feat: add Vue add-ons with new directives and update dependencies
- Introduced new Vue add-ons package with directives for accessibility (v-aria) and tooltips (v-title).
- Updated package.json files to include necessary dependencies such as @vueuse/core and @floating-ui/vue.
- Enhanced TypeScript configuration for better module resolution and strict type checking.
- Updated pnpm workspace configuration to include nested packages for improved structure.

--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
   "description": "",
-  "author": "",
+  "author": "razer.hua",
   "license": "ISC",
   "keywords": [],
   "exports": {
@@ -29,7 +29,6 @@
     "@internationalized/date": "^3.10.1",
     "@rui-ark/shared": "workspace:*",
     "@rui-ark/themes": "workspace:*",
-    "@vueuse/core": "^14.1.0",
     "@zag-js/date-picker": "^1.33.1",
     "@zag-js/select": "^1.33.1",
     "@zag-js/toast": "^1.33.1",
