--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,7 +4,7 @@ trustPolicy: no-downgrade
 
 packages:
   - packages/*
-  - packages/*/*
+  - packages/**/*
   - playground/*
 ignoredBuiltDependencies:
   - core-js
