refactor: reorganize Vue add-ons structure and update package names
- Moved directive packages under a new namespace '@rui-ark/vue/add-ons' for better organization.
- Updated package.json files for v-aria, v-lazy, and v-title directives to reflect the new naming convention.
- Adjusted pnpm workspace configuration to include specific directories for improved package management.

--- a/packages/vue/add-ons/directives/v-aria/package.json
+++ b/packages/vue/add-ons/directives/v-aria/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rui-ark/vue/v-aria",
+  "name": "@rui-ark/vue/add-ons/v-aria",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
   "description": "",
