--- a/packages/vue/add-ons/directives/v-lazy/package.json
+++ b/packages/vue/add-ons/directives/v-lazy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rui-ark/vue/v-lazy",
+  "name": "@rui-ark/vue/add-ons/v-lazy",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
   "description": "",
