--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,7 +4,8 @@ trustPolicy: no-downgrade
 
 packages:
   - packages/*
-  - packages/**/*
+  - packages/vue/core
+  - packages/vue/add-ons
   - playground/*
 ignoredBuiltDependencies:
   - core-js
