--- a/packages/vue/add-ons/directives/v-title/package.json
+++ b/packages/vue/add-ons/directives/v-title/package.json
@@ -15,8 +15,10 @@
   },
   "peerDependencies": {
     "@floating-ui/vue": "^1.1.10",
-    "@rui-ark/shared": "workspace:*",
     "@rui-ark/themes": "workspace:*",
     "vue": "^3.5.27"
+  },
+  "devDependencies": {
+    "@floating-ui/vue": "^1.1.10"
   }
 }
