--- a/packages/vue/addons/directives/v-title/package.json
+++ b/packages/vue/addons/directives/v-title/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rui-ark/vue/addons/v-title",
+  "name": "@rui-ark/vue/v-title",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
   "description": "",
@@ -14,11 +14,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "@floating-ui/vue": "^1.1.10",
-    "@rui-ark/themes": "workspace:*",
     "vue": "^3.5.27"
   },
-  "devDependencies": {
-    "@floating-ui/vue": "^1.1.10"
+  "dependencies": {
+    "@floating-ui/vue": "^1.1.10",
+    "@rui-ark/themes": "workspace:*"
   }
 }
