feat: update Storybook configuration and enhance Vue add-ons
- Added @storybook/addon-storysource to package.json for improved documentation capabilities.
- Updated Storybook main configuration to include new stories and enhance the bundler configuration.
- Refactored existing stories to include raw code examples for better documentation and usability.
- Introduced new types directory for better type management in Vue add-ons.
- Improved overall organization and structure of Vue components and their stories.

--- a/packages/vue/addons/tsconfig.json
+++ b/packages/vue/addons/tsconfig.json
@@ -40,7 +40,8 @@
     "composables/**/*.vue",
     "directives/**/*.ts",
     "directives/**/*.tsx",
-    "directives/**/*.vue"
+    "directives/**/*.vue",
+    "types/**/*.d.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
