--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -15,6 +15,7 @@
     "@rsbuild/plugin-vue-jsx": "^1.1.1",
     "@storybook/addon-a11y": "^10.2.0",
     "@storybook/addon-docs": "^10.2.0",
+    "@storybook/addon-storysource": "^8.6.14",
     "@storybook/addon-themes": "^10.2.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@vueuse/core": "^14.1.0",
