refactor: update package names and exports for Vue add-ons
- Renamed package names from '@rui-ark/vue/addons' to '@rui-ark/vue-addons' for consistency.
- Updated exports in the main add-ons package to include paths for v-lazy, v-title, v-aria, and virtual components.
- Ensured all related directive packages reflect the new naming convention.

--- a/packages/vue/addons/package.json
+++ b/packages/vue/addons/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "@rui-ark/vue/addons",
+  "name": "@rui-ark/vue-addons",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
   "description": "",
+  "exports": {
+    "./v-lazy": "./v-lazy/src/index.ts",
+    "./v-title": "./v-title/src/index.ts",
+    "./v-aria": "./v-aria/src/index.ts",
+    "./virtual": "./virtual/src/index.ts"
+  },
   "author": "",
   "license": "ISC",
   "keywords": [],
