feat: introduce virtual components and enhance v-aria directive
- Added new virtual components including VirtualGrid, VirtualList, and their respective items for efficient rendering of large datasets.
- Implemented infinite loading functionality in VirtualList and VirtualGrid for dynamic data fetching.
- Enhanced v-aria directive to manage ARIA attributes and keyboard interactions for non-interactive elements.
- Updated package.json files for new components and directives, ensuring correct exports and dependencies.
- Created examples and stories to demonstrate usage of the new virtual components and v-aria directive.

--- a/packages/vue/addons/components/virtual/package.json
+++ b/packages/vue/addons/components/virtual/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "@rui-ark/vue-addons:v-aria",
+  "name": "@rui-ark/vue-addons-virtual",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
   "description": "",
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "exports": {
-    ".": "./src/index.ts"
-  },
-  "main": "src/index.ts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
     "vue": "^3.5.27"
+  },
+  "dependencies": {
+    "@tanstack/vue-virtual": "^3.13.18",
+    "es-toolkit": "^1.44.0",
+    "lucide-vue-next": "^0.562.0"
   }
 }
