--- a/packages/vue/addons/directives/v-lazy/package.json
+++ b/packages/vue/addons/directives/v-lazy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rui-ark/vue-addons:v-lazy",
+  "name": "@rui-ark/vue-addons-v-lazy",
   "type": "module",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
