--- a/packages/vue/addons/directives/v-title/package.json
+++ b/packages/vue/addons/directives/v-title/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rui-ark/vue-addons:v-title",
+  "name": "@rui-ark/vue-addons-v-title",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
   "description": "",
