--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -18,7 +18,9 @@
     "@storybook/addon-storysource": "^8.6.14",
     "@storybook/addon-themes": "^10.2.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.2.0",
     "@vueuse/core": "^14.1.0",
+    "bun-types": "^1.3.8",
     "storybook": "^10.2.0",
     "storybook-vue3-rsbuild": "^3.2.2",
     "tailwindcss": "^4.1.18",
