feat: add FloatingPanel component and enhance dialog functionality
- Introduced the FloatingPanel component with TypeScript support and defined its props and emits.
- Added FloatingPanelContent and FloatingPanelHeader components for better structure and usability.
- Updated DialogContent component to utilize a new utility function for checking child VNodes.
- Included @zag-js/floating-panel dependency in package.json and pnpm-lock.yaml for integration.

--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -32,6 +32,7 @@
     "@rui-ark/shared": "workspace:*",
     "@rui-ark/themes": "workspace:*",
     "@zag-js/date-picker": "^1.33.1",
+    "@zag-js/floating-panel": "^1.33.1",
     "@zag-js/select": "^1.33.1",
     "@zag-js/toast": "^1.33.1",
     "@zag-js/tree-view": "^1.33.1",
