chore: update pnpm-lock and improve dialog component styles
- Updated the pnpm-lock.yaml to use the latest version of @hwacc/ark-ui-vue.
- Enhanced dialog component styles by adjusting padding for footer elements across different sizes for better visual consistency.
- Modified Storybook configuration to reflect updated paths for core stories and improved import structure.

--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -14,7 +14,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "rslib build --tsconfig ./tsconfig.build.json && vue-tsc --project tsconfig.build.json",
+    "build": "rslib build --tsconfig ./tsconfig.build.json && vue-tsc --project tsconfig.build.json && tsc-alias --project tsconfig.build.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
@@ -31,7 +31,7 @@
     "vue-component-type-helpers": "^3.2.1"
   },
   "devDependencies": {
-    "@ark-ui/vue": "npm:@hwacc/ark-ui-vue@5.31.0-leading.2",
+    "@ark-ui/vue": "npm:@hwacc/ark-ui-vue@5.31.0-leading.3",
     "@iconify/vue": "^5.0.0",
     "@internationalized/date": "^3.10.1",
     "@rsbuild/plugin-babel": "^1.0.6",
