chore: update package configurations and add new themes
- Added .npmrc to .gitignore for better environment management.
- Updated pnpm-lock.yaml to include new dependencies for @rark-ui/shared and @rark-ui/themes.
- Enhanced package.json files for shared and themes with descriptions, authors, and keywords for better clarity.
- Introduced new theme configurations and CSS files for default and razer themes, improving modularity and organization.
- Removed deprecated type definitions from themes to streamline the codebase.

--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -3,10 +3,14 @@
   "type": "module",
   "version": "1.0.0",
   "packageManager": "pnpm@10.13.1",
-  "description": "",
+  "description": "Themes for Rark UI",
   "author": "Hwacc(mshcccck@gmail.com)",
   "license": "MIT",
-  "keywords": [],
+  "keywords": [
+    "rark-ui",
+    "themes",
+    "tailwind"
+  ],
   "exports": {
     "./razer": {
       "types": "./dist/razer/index.d.ts",
@@ -21,6 +25,9 @@
     "./razer/index.css": "./dist/razer/index.css",
     "./default/index.css": "./dist/default/index.css"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "pnpm -s run build:js && pnpm -s run build:css",
     "build:js": "tsc",
