--- a/packages/vue/addons/tsconfig.json
+++ b/packages/vue/addons/tsconfig.json
@@ -16,7 +16,7 @@
     "moduleResolution": "Bundler",
     "paths": {
       "@rark-ui/shared/*": ["../../shared/src/*"],
-      "@rark-ui/themes/*": ["../../themes/*"]
+      "@rark-ui/themes/*": ["../../themes/src/*"]
     },
 
     "allowImportingTsExtensions": true,
