--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "tsBuildInfoFile": "./dist/.tsbuildinfo",
+    "tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo",
     "target": "ES2020",
     "rootDir": "./src",
     "module": "ESNext",
