chore: enhance Vue addons with shared utilities and update package configurations
- Introduced @rark-ui/vue-addons-shared for shared utilities across Vue addons, including composables and context management.
- Updated package.json files for shared and themes to include descriptions, authors, and public access configurations.
- Enhanced build scripts and TypeScript configurations for better type safety and modularity.
- Removed deprecated type definitions and adjusted imports for improved structure and clarity.

--- a/packages/vue/addons/components/virtual/package.json
+++ b/packages/vue/addons/components/virtual/package.json
@@ -12,18 +12,25 @@
     "addons",
     "virtual"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "main": "./dist/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rslib build --tsconfig ./tsconfig.build.json",
+    "build": "rslib build --tsconfig ./tsconfig.build.json && vue-tsc --project tsconfig.build.json && tsc-alias --project tsconfig.build.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
     "vue": "^3.5.27"
   },
   "dependencies": {
+    "@rark-ui/vue-addons-shared": "^1.0.0",
     "@tanstack/vue-virtual": "^3.13.18",
     "es-toolkit": "^1.44.0",
     "lucide-vue-next": "^0.563.0",
@@ -33,6 +40,8 @@
     "@rsbuild/plugin-babel": "^1.0.6",
     "@rsbuild/plugin-vue-jsx": "^1.1.1",
     "@rslib/core": "0.19.4",
-    "rsbuild-plugin-unplugin-vue": "^0.1.0"
+    "rsbuild-plugin-unplugin-vue": "^0.1.0",
+    "tsc-alias": "^1.8.16",
+    "vue-tsc": "^3.2.4"
   }
 }
