--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -39,5 +39,8 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
