--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -73,5 +73,8 @@
     "tsc-alias": "^1.8.16",
     "vue-component-type-helpers": "^3.2.1",
     "vue-tsc": "^3.2.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
