chore: refactor v-lazy directive and improve structure
- Removed unused dependencies from package.json for cleaner configuration.
- Updated TypeScript settings to prevent unused locals and parameters.
- Refactored lazy loading components to utilize local source files instead of external dependencies.
- Introduced new source files for lazy components, containers, and utilities to enhance modularity and maintainability.
- Improved type definitions and added a README for better documentation of the v-lazy directive.

--- a/packages/vue/addons/directives/v-lazy/package.json
+++ b/packages/vue/addons/directives/v-lazy/package.json
@@ -19,11 +19,9 @@
     "vue": "^3.5.27"
   },
   "dependencies": {
-    "assign-deep": "^1.0.1",
     "es-toolkit": "^1.44.0"
   },
   "devDependencies": {
-    "@rslib/core": "0.19.4",
-    "vue-lazyload": "^3.0.0"
+    "@rslib/core": "0.19.4"
   }
 }
