--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v6
       - name: Resolve package metadata
         id: resolve_tag
-        uses: ./.github/actions/resolve-tag
+        uses: .github/actions/resolve-tag
 
   publish:
     name: Build and publish
@@ -31,7 +31,7 @@ jobs:
       contents: read
     steps:
       - name: Build package by composite action
-        uses: ./.github/actions/build
+        uses: .github/actions/build
         with:
           package_name: ${{ needs.resolve.outputs.package_name }}
           package_dir: ${{ needs.resolve.outputs.package_dir }}
