--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,11 @@ jobs:
       version: ${{ steps.resolve_tag.outputs.version }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
+
       - name: Resolve package metadata
         id: resolve_tag
-        uses: .github/actions/resolve-tag
+        uses: ./.github/actions/resolve-tag
 
   publish:
     name: Build and publish
@@ -30,8 +31,11 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Build package by composite action
-        uses: .github/actions/build
+        uses: ./.github/actions/build
         with:
           package_name: ${{ needs.resolve.outputs.package_name }}
           package_dir: ${{ needs.resolve.outputs.package_dir }}
