feat: integrate @rark-ui/themes into Vue package
- Added @rark-ui/themes as a dependency in package.json and updated pnpm-lock.yaml.
- Configured TypeScript paths for themes in tsconfig.json to facilitate module resolution.
- Updated Storybook styles to include theme styles and Tailwind CSS.
- Refactored TreeCheckboxNode component to improve structure and maintainability.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -9,6 +9,9 @@
     "build": "storybook build -o .storybook-static",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@rark-ui/themes": "workspace:*"
+  },
   "devDependencies": {
     "@faker-js/faker": "^10.1.0",
     "@rsbuild/core": "^1.6.15",
