--- a/packages/vue/tsconfig.json
+++ b/packages/vue/tsconfig.json
@@ -3,6 +3,10 @@
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "paths": {
+      "@rark-ui/themes/*": ["../../themes/src/*"]
+    },
+
     "types": ["node", "bun-types"]
   },
   "include": ["server.ts"]
