chore: update pnpm-lock.yaml and package.json for workspace dependencies
- Changed @rark-ui/themes and @rark-ui/vue dependencies in package.json to use workspace references.
- Updated pnpm-lock.yaml to reflect the new versions and removed obsolete entries for themes and vue packages.

--- a/playground/vue/package.json
+++ b/playground/vue/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@ark-ui/vue": "npm:@hwacc/ark-ui-vue@5.31.0-leading.3",
-    "@rark-ui/themes": "^1.2.0",
-    "@rark-ui/vue": "^1.2.1",
+    "@rark-ui/themes": "workspace:*",
+    "@rark-ui/vue": "workspace:*",
     "lucide-vue-next": "^0.563.0",
     "vue": "^3.5.25"
   },
