--- a/.github/workflows/version-pr.yml
+++ b/.github/workflows/version-pr.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   version-pr:
+    if: ${{ !startsWith(github.event.head_commit.message, 'Merge pull request') && !contains(github.event.head_commit.message, '(#') }}
     name: Version PR by changesets
     runs-on: ubuntu-latest
     permissions:
