chore: mark @rark-ui/vue and @rark-ui/vue-addons as private in package.json

--- a/packages/vue/addons/package.json
+++ b/packages/vue/addons/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@rark-ui/vue-addons",
+  "private": true,
   "packageManager": "pnpm@10.13.1",
   "description": "Vue addons for Rark UI",
   "author": {
