--- a/packages/vue/core/package.json
+++ b/packages/vue/core/package.json
@@ -2,6 +2,7 @@
   "name": "@rark-ui/vue",
   "type": "module",
   "version": "1.2.3",
+  "private": true,
   "packageManager": "pnpm@10.13.1",
   "description": "Vue core components for Rark UI, based on Ark UI",
   "author": {
