chore: mark @rark-ui/vue-storybook as private in package.json

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@rark-ui/vue-storybook",
   "type": "module",
+  "private": true,
   "description": "Vue stories for Rark UI",
   "author": {
     "name": "Hwacc",
